reuseable navbar and sidebar

--- a/stats.html
+++ b/stats.html
@@ -16,125 +16,13 @@
 </head>
 
 <body>
-  <!-- navbar -->
-  <nav class="navbar">
-    <div class="logo_item">
-      <i class="bx bx-menu" id="sidebarOpen"></i>
-      <img src="assets/images/eraskon_logo.webp" alt=""></i>Inventory System
-    </div>
+ <!-- Load Navbar -->
+  <script src="components/navbar.js"></script>
 
-    <div class="search_bar">
-      <input type="text" placeholder="Search" />
-    </div>
-
-    <div class="navbar_content">
-      <i class="bi bi-grid"></i>
-      <i class='bx bx-sun' id="darkLight"></i>
-      <i class='bx bx-bell'></i>
-      <img src="assets/images/avatar.png" alt="" class="profile" />
-    </div>
-  </nav>
-
-  <!-- sidebar -->
-  <nav class="sidebar">
-    <div class="menu_content">
-      <ul class="menu_items">
-        <div class="menu_title menu_dahsboard"></div>
-        <!-- duplicate or remove this li tag if you want to add or remove navlink with submenu -->
-        <!-- start -->
-        <li class="item">
-          <div href="#" class="nav_link submenu_item">
-            <span class="navlink_icon">
-              <i class="bx bx-home-alt"></i>
-            </span>
-            <span class="navlink">Home</span>
-            <i class="bx bx-chevron-right arrow-left"></i>
-          </div>
-
-          <ul class="menu_items submenu">
-            <a href="#" class="nav_link sublink">Nav Sub Link</a>
-            <a href="#" class="nav_link sublink">Nav Sub Link</a>
-            <a href="#" class="nav_link sublink">Nav Sub Link</a>
-            <a href="#" class="nav_link sublink">Nav Sub Link</a>
-          </ul>
-        </li>
-        <!-- end -->
-
-        <!-- duplicate this li tag if you want to add or remove  navlink with submenu -->
-        <!-- start -->
-        <li class="item">
-          <div href="#" class="nav_link submenu_item">
-            <span class="navlink_icon">
-              <i class="bx bx-grid-alt"></i>
-            </span>
-            <span class="navlink">Overview</span>
-            <i class="bx bx-chevron-right arrow-left"></i>
-          </div>
-
-          <ul class="menu_items submenu">
-            <a href="#" class="nav_link sublink">Nav Sub Link</a>
-            <a href="#" class="nav_link sublink">Nav Sub Link</a>
-            <a href="#" class="nav_link sublink">Nav Sub Link</a>
-            <a href="#" class="nav_link sublink">Nav Sub Link</a>
-          </ul>
-        </li>
-        <!-- end -->
-      </ul>
-
-      <ul class="menu_items">
-        <div class="menu_title menu_editor"></div>
-        <!-- duplicate these li tag if you want to add or remove navlink only -->
-        <!-- Start -->
-        <li class="item">
-          <a href="#" class="nav_link">
-            <span class="navlink_icon">
-              <i class="bx bxs-magic-wand"></i>
-            </span>
-            <span class="navlink">Products</span>
-          </a>
-        </li>
-        <!-- End -->
-
-        <li class="item">
-          <a href="#" class="nav_link">
-            <span class="navlink_icon">
-              <i class="bx bx-loader-circle"></i>
-            </span>
-            <span class="navlink">Sales</span>
-          </a>
-        </li>
-        <li class="item">
-          <a href="#" class="nav_link">
-            <span class="navlink_icon">
-              <i class="bx bx-filter"></i>
-            </span>
-            <span class="navlink">Report</span>
-          </a>
-        </li>
-        <li class="item">
-          <a href="#" class="nav_link">
-            <span class="navlink_icon">
-              <i class="bx bx-cloud-upload"></i>
-            </span>
-            <span class="navlink">stock</span>
-          </a>
-        </li>
-      </ul>
-
-
-      <!-- Sidebar Open / Close -->
-      <div class="bottom_content">
-        <div class="bottom expand_sidebar">
-          <span> Expand</span>
-          <i class='bx bx-log-in'></i>
-        </div>
-        <div class="bottom collapse_sidebar">
-          <span> Collapse</span>
-          <i class='bx bx-log-out'></i>
-        </div>
-      </div>
-    </div>
-  </nav>
+  <!-- Load Sidebar -->
+  <script src="components/sidebar.js"></script>
+    
+  <!-- Main Content -->
   <main id="app" class="main-content">
     <div class="cards">
       <div class="card" v-for="card in cards" :key="card.title">
